fixed spacing in row elements

--- a/main.css
+++ b/main.css
@@ -373,7 +373,8 @@ h3,
 h5,
 h6 {
     color: #414340;
-    margin: auto;
+    margin-bottom: 50px;
+    padding-bottom: 25px;
 }
 
 .teaser {
